# backend/services/gopher-stamp-crud/internal/domain/entity/stamp.go
@@ -1,10 +1,7 @@
 package entity
 
-import "time"
-
 type Stamp struct {
-	ID        uint      `json:"id" gorm:"primaryKey"`
-	Name      string    `json:"name" gorm:"size:100;not null"`
-	CreatedAt time.Time `json:"created_at" gorm:"autoCreateTime"`
-	UpdatedAt time.Time `json:"updated_at" gorm:"autoUpdateTime"`
+	ID        uint   `json:"id" gorm:"primaryKey"`
+	Name      string `json:"name" gorm:"size:100;not null"`
+	SecretKey string `json:"-" gorm:"size:32;not null"`
 }
